# Utility

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  array.hpp  dynamicArray.hpp  kdtree.hpp  logger.hpp  main.cpp  stringUtility.hpp  timer.hpp  xmlparser.hpp
cmake/: checkCompiler.cmake
test/: CMakeLists.txt  arrayUtility_test.cpp  dynamicArray_test.cpp  stringUtility_test.cpp
